[refs #99876] Admin: fix table styles to work on IE.

--- a/land/copernicus/content/browser/static/fileslibraryitem/app/src/less/main.less
+++ b/land/copernicus/content/browser/static/fileslibraryitem/app/src/less/main.less
@@ -5,18 +5,15 @@ body.template-admin_files_library {
     margin: 20px;
 
     table#editor {
-      background: @land-gray-lighter;
-      border-spacing: 5px;
       color: black;
       margin: auto;
-      border-collapse: initial !important;
+      border-collapse: collapse !important;
 
       tr, td, th {
         background: white;
         padding: 5px;
-        margin: 5px;
         text-align: center;
-        border: none !important;
+        border: 5px solid @land-gray-lighter;
       }
 
       th {
